--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <br>
     <section>
         <h2>About Juan</h2>
-        <article>"I am passionately engrossed in the world of photography and arts. Driven by a creative urge, I find solace in capturing the unique beauty around me through my camera lens. My fascination lies in depicting the intricacies of the universe, from the grandeur of landscapes to the minute details of a singular object. Meanwhile, exploring different artistic media allows me to express my thoughts and emotions in a tangible form. I believe that every photograph or art piece is a chance to share a part of my perspective with others, engaging in a silent yet expressive dialogue that transcends the barriers of space and time."</article>
+        <article>
+            <p>"I am passionately engrossed in the world of photography and arts. Driven by a creative urge, I find solace in capturing the unique beauty around me through my camera lens. My fascination lies in depicting the intricacies of the universe, from the grandeur of landscapes to the minute details of a singular object. Meanwhile, exploring different artistic media allows me to express my thoughts and emotions in a tangible form. I believe that every photograph or art piece is a chance to share a part of my perspective with others, engaging in a silent yet expressive dialogue that transcends the barriers of space and time."</p>
+        </article>
     </section>
     <br>
     <section>
         <h3>Contact Juan</h3>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d346763.7319608589!2d-81.77703748554887!3d30.33218343974175!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e5b7e84961df73%3A0x40260cbe6f8f4e0!2sJacksonville%2C%20FL%2C%20USA!5e0!3m2!1sen!2suk!4v1666074517070!5m2!1sen!2suk" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <img src="images/jacksonville.jpeg" alt="Picture of Jacksonville" >
         <br>
         <a href="http://www.camiloleon.com">Visit My photography Website!</a>
         <br>
